--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -10,24 +10,24 @@ font pango:Terminus, FontAwesome 10
 bindsym $mod+Return exec --no-startup-id $term
 bindsym $mod+Shift+Return exec --no-startup-id $term -e tmux
 # rofi
-bindsym $mod+x exec rofi -show drun -modi drun -show-icons d
+bindsym $mod+x exec env QT_QPA_PLATFORMTHEME=qt5ct rofi -show drun -modi drun -show-icons d
 # reload config
 bindsym $mod+Shift+c reload	
 # redraw i3
 bindsym $mod+Shift+r restart
-# screen/web recording
-bindsym $mod+q exec --no-startup-id $HOME/.bin/screencast.sh
-bindsym $mod+Shift+q exec --no-startup-id $HOME/.bin/screencast_mic.sh
-bindsym $mod+w exec --no-startup-id $HOME/.bin/webcast.sh
-bindsym $mod+Shift+w exec --no-startup-id $HOME/.bin/webcast_mic.sh
-# stop
-bindsym $mod+p exec pkill ffmpeg 
-# multihead
-bindsym $mod+Left exec --no-startup-id $HOME/.bin/dual_left.sh
-bindsym $mod+Up exec --no-startup-id $HOME/.bin/dual_top.sh
-bindsym $mod+Right exec --no-startup-id $HOME/.bin/dual_right.sh
-bindsym $mod+Down exec --no-startup-id $HOME/.bin/dual_off.sh
-# dvds
+# screen/webcam recording
+bindsym $mod+q exec --no-startup-id $HOME/.bin/record_screen.sh
+bindsym $mod+Shift+q exec --no-startup-id $HOME/.bin/record_screen-mic.sh
+bindsym $mod+w exec --no-startup-id $HOME/.bin/record_webcam.sh
+bindsym $mod+Shift+w exec --no-startup-id $HOME/.bin/record_webcam-mic.sh
+# screen/cam kill
+bindsym $mod+p exec pkill ffmpeg
+# multi-head
+bindsym $mod+Left exec --no-startup-id $HOME/.bin/dual_screen-left.sh
+bindsym $mod+Up exec --no-startup-id $HOME/.bin/dual_screen-top.sh
+bindsym $mod+Right exec --no-startup-id $HOME/.bin/dual_screen-right.sh
+bindsym $mod+Down exec --no-startup-id $HOME/.bin/dual_screen-OFF.sh
+# dvd
 bindsym $mod+grave exec --no-startup-id mpv dvd://; Workspace $WS6
 # pass
 bindsym $mod+z exec --no-startup-id passmenu
@@ -133,13 +133,21 @@ bindsym $mod+Shift+7 move container to workspace $WS7
 bindsym $mod+Shift+8 move container to workspace $WS8
 bindsym $mod+Shift+9 move container to workspace $WS9
 bindsym $mod+Shift+0 move container to workspace $WS10
-# assignments
-assign [class="^URxvt$" instance="htop"] 0
-assign [class="qutebrowser"] 2
-assign [class="^URxvt$" instance="ranger"] 3
+# assignment
+assign [class="QtPass"] 0
+for_window [class="^QtPass$"] focus
+assign [class="Waterfox"] 2
+for_window [class="^Waterfox$"] focus
+assign [instance="ranger" class="URxvt"] 3
+for_window [instance="^ranger$" class="^URxvt$"] focus
 assign [class="retroarch"] 5
+for_window [class="^retroarch$"] focus
 assign [class="Steam"] 5
+for_window [class="^Steam$"] focus
 assign [class="Vlc"] 6
+for_window [class="^Vlc$"] focus
+assign [class="VirtualBox Manager"] 7
+for_window [class="^VirtualBox Manager$"] focus
 
 ##~~~~~~ I3BAR ~~~~~~~~~~~##
 
@@ -165,37 +173,30 @@ mode "$mode_system" {
 }
 bindsym $mod+space mode "$mode_system"
 
-##~~~~~~ TOUCHPAD ~~~~~~~~##
+##~~~~~~ SPECIAL BINDS ~~~~~~~~##
 
+# touchpad
 exec --no-startup-id synclient VertEdgeScroll=3 TapButton1=1 TapButton2=3 TapButton3=2
-
-##~~~~~~ VOLUME ~~~~~~~~~~##
-
+# volume
 bindsym XF86AudioRaiseVolume exec --no-startup-id "pulseaudio-ctl up 5"
 bindsym XF86AudioLowerVolume exec --no-startup-id "pulseaudio-ctl down 5"
 bindsym XF86AudioMute exec --no-startup-id "pulseaudio-ctl mute"
 # mic - mute/unmute
 bindsym Ctrl+Shift+m exec --no-startup-id "pulseaudio-ctl mute-input"
-
-##~~~~~~ MUSIC ~~~~~~~~~~~##
-
+# media 
 bindsym XF86AudioNext exec --no-startup-id mpc next
 bindsym XF86AudioPrev exec --no-startup-id mpc prev
 bindsym XF86AudioPlay exec --no-startup-id mpc toggle
-
-##~~~~~~ EJECT ~~~~~~~~~~~##
-
+# cd/dvd
 bindsym XF86Eject exec --no-startup-id eject /dev/sr0
-
-##~~~~~~ ALIENFX ~~~~~~~~~##
-
+# alienfx
 bindsym XF86Launch1 exec --no-startup-id alienfx-gtk
 
 ##~~~~~~ STARTUP ~~~~~~~~~##
 
-exec --no-startup-id $HOME/.bin/xss.sh
+exec --no-startup-id $HOME/.bin/screen_power_management.sh
 exec --no-startup-id /usr/bin/compton -f --xrender-sync --xrender-sync-fence
 exec --no-startup-id /usr/bin/blueman-applet
 exec --no-startup-id /usr/bin/nvidia-settings --load-config-only 
-exec --no-startup-id /usr/bin/wal -R -a "90"
 exec --no-startup-id /usr/bin/unclutter -idle 1
+exec --no-startup-id /usr/bin/wal -R -a "90"
