modified:   .Xresources 	new file:   .bash_logout 	renamed:    .zprofile -> .bash_profile 	new file:   .bashrc 	modified:   .config/alienfx/blue.json 	modified:   .config/i3/i3.config 	modified:   .config/mutt/muttrc 	modified:   .config/polybar/config 	new file:   .config/polybar/inbox.sh 	modified:   .config/qutebrowser/config.py 	new file:   .config/st/.travis.yml 	new file:   .config/st/FAQ 	new file:   .config/st/LEGACY 	new file:   .config/st/LICENSE 	new file:   .config/st/Makefile 	new file:   .config/st/README.md 	new file:   .config/st/TODO 	new file:   .config/st/arg.h 	new file:   .config/st/config.def.h 	new file:   .config/st/config.h 	new file:   .config/st/config.mk 	new file:   .config/st/patches/st-clipboard-20160727.diff 	new file:   .config/st/patches/st-no_bold_colors-20160727.diff 	new file:   .config/st/patches/st-scrollback-20170104.diff 	new file:   .config/st/patches/st-scrollback-mouse-20161020.diff 	new file:   .config/st/patches/st-solarized-both-20160727.diff 	new file:   .config/st/patches/st-transparent.diff 	new file:   .config/st/patches/st-vertcenter-20160819.diff 	new file:   .config/st/st.1 	new file:   .config/st/st.c 	new file:   .config/st/st.info 	new file:   .config/st/st.o 	new file:   .config/surf/FAQ.md 	new file:   .config/surf/LICENSE 	new file:   .config/surf/Makefile 	new file:   .config/surf/README 	new file:   .config/surf/TODO.md 	new file:   .config/surf/arg.h 	new file:   .config/surf/config.def.h 	new file:   .config/surf/config.h 	new file:   .config/surf/config.mk 	new file:   .config/surf/surf 	new file:   .config/surf/surf-open.sh 	new file:   .config/surf/surf.1 	new file:   .config/surf/surf.c 	new file:   .config/surf/surf.o 	new file:   .config/surf/surf.png 	renamed:    .local/share/icons/Alienware-Logo.png -> .local/share/icons/Alienware(C)-logo.png 	renamed:    .local/share/icons/JRod-Bush.png -> .local/share/icons/JRod&Bush.png 	renamed:    .local/share/icons/avatar-Link.jpg -> .local/share/icons/Lin

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -20,8 +20,11 @@ bindsym $mod+q exec --no-startup-id $HOME/.bin/record_screen.sh
 bindsym $mod+Shift+q exec --no-startup-id $HOME/.bin/record_screen-mic.sh
 bindsym $mod+w exec --no-startup-id $HOME/.bin/record_webcam.sh
 bindsym $mod+Shift+w exec --no-startup-id $HOME/.bin/record_webcam-mic.sh
-# screen/cam kill
+# screen/webcam kill
 bindsym $mod+p exec pkill ffmpeg
+# screenshot - all
+bindsym Print exec --no-startup-id scrot
+bindsym Shift+Print exec --no-startup-id scrot -u
 # multi-head
 bindsym $mod+Left exec --no-startup-id $HOME/.bin/dual_screen-left.sh
 bindsym $mod+Up exec --no-startup-id $HOME/.bin/dual_screen-top.sh
@@ -50,6 +53,7 @@ bindsym $mod+bracketleft split h
 bindsym $mod+bracketright split v 
 # fullscreen
 bindsym $mod+f fullscreen toggle
+bindsym $mod+Shift+f fullscreen toggle global 
 # kill focused window
 bindsym $mod+c kill
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -75,7 +79,7 @@ for_window [class="^.*"] border pixel 2
 gaps inner 22
 gaps outer 22
 # gaps - on/off
-bindsym $mod+Shift+f gaps inner current set 22; gaps outer current set 22
+bindsym $mod+Shift+s gaps inner current set 22; gaps outer current set 22
 bindsym $mod+Shift+d gaps inner current set 0; gaps outer current set 0
 # gaps - increase/decrease
 bindsym $mod+Shift+g gaps inner current plus 5
@@ -86,7 +90,7 @@ for_window [instance="dropdown"] floating enable
 for_window [instance="dropdown"] resize set 900 700
 for_window [instance="dropdown"] move position center
 for_window [instance="dropdown"] move scratchpad
-exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -name dropdown -e tmux 
+exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -name dropdown -e tmux
 bindsym $mod+u [instance="dropdown"] scratchpad show; move position center
 # python3
 for_window [instance="math"] floating enable
@@ -138,8 +142,10 @@ assign [class="QtPass"] 0
 for_window [class="^QtPass$"] focus
 assign [class="Waterfox"] 2
 for_window [class="^Waterfox$"] focus
-assign [instance="ranger" class="URxvt"] 3
-for_window [instance="^ranger$" class="^URxvt$"] focus
+assign [class="qutebrowser"] 2
+for_window [class="^qutebrowser$"] focus
+assign [class="Surf"] 2
+for_window [class="^Surf$"] focus
 assign [class="retroarch"] 5
 for_window [class="^retroarch$"] focus
 assign [class="Steam"] 5
