--- a/.nvidia-settings-rc
+++ b/.nvidia-settings-rc
@@ -1,5 +1,5 @@
 #
-# /home/awolbox/.nvidia-settings-rc
+# ~/.nvidia-settings-rc - awolbox@crash
 #
 # Configuration file for nvidia-settings - the NVIDIA X Server Settings utility
 # Generated on Sun Feb  4 10:25:45 2018
