--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-# .tmux.conf
+#
+# ~/.tmux.conf - awolbox@crash
+#
 
 #~ Term ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 set-option -g default-terminal "tmux-256color"
