new file:   .bash_aliases 	copied:     .bashrc -> .bash_functions 	modified:   .bashrc 	modified:   .config/i3/i3.config 	modified:   .config/polybar/config 	modified:   .config/polybar/inbox.sh 	new file:   .config/polybar/system-usb-udev.sh 	modified:   .config/polybar/trash.sh 	deleted:    .config/polybar/usb-mount.sh 	modified:   .tmux.conf 	modified:   .xinitrc

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -1,4 +1,6 @@
-# awolbox
+#
+# i3wm
+#
 
 ##~~~~~~ GENERAL ~~~~~~~~~##
 
@@ -6,7 +8,7 @@ set $mod Mod4
 set $term urxvtc
 font pango:Terminus, FontAwesome 10
 
-# term
+# i3 sensible term
 bindsym $mod+Return exec --no-startup-id $term
 bindsym $mod+Shift+Return exec --no-startup-id $term -e tmux
 # rofi
@@ -66,13 +68,15 @@ bindsym $mod+Shift+y resize grow width 10 px or 10 ppt
 # back to normal
 bindsym $mod+Shift+Backspace mode "default"
 # colors
-# [class]                  [border]   [backgr.]   [text]    [indicator]  [child_border]
-client.focused             #000000    #000000    #ffffff     #000000        #000000
-client.focused_inactive    #000000    #000000    #ffffff     #000000        #000000
-client.unfocused           #000000    #000000    #888888     #000000        #000000
-client.urgent              #000000    #000000    #ffffff     #000000        #000000
-client.placeholder         #000000    #000000    #ffffff     #000000        #000000
-client.background          #000000
+set_from_resource $fg i3wm.color0
+set_from_resource $bg i3wm.color9
+# [class]	      [border][backgr.][text][indicator][child_border]
+client.focused          $bg     $bg     $fg     $bg       $bg
+client.focused_inactive $fg     $bg     $fg     $bg       $fg
+client.unfocused        $fg     $bg     $fg     $bg       $fg
+client.urgent           $bg     $bg     $fg     $bg       $bg
+client.placeholder      $bg     $bg     $fg     $bg       $bg
+client.background       $bg
 # borders
 for_window [class="^.*"] border pixel 2
 # gaps
@@ -91,14 +95,14 @@ for_window [instance="dropdown"] resize set 900 700
 for_window [instance="dropdown"] move position center
 for_window [instance="dropdown"] move scratchpad
 exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -name dropdown -e tmux
-bindsym $mod+u [instance="dropdown"] scratchpad show; move position center
+bindsym $mod+u [instance="dropdown"] scratchpad show; move position center; focus
 # python3
 for_window [instance="math"] floating enable
 for_window [instance="math"] resize set 800 300
 for_window [instance="math"] move position center
 for_window [instance="math"] move scratchpad
 exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -fn "xft:mono:pixelsize=24" -name math -e python3 -q
-bindsym $mod+m [instance="math"] scratchpad show; move position center
+bindsym $mod+m [instance="math"] scratchpad show; move position center; focus
 
 ##~~~~~~ WORKSPACES ~~~~~~##
 
@@ -139,21 +143,21 @@ bindsym $mod+Shift+9 move container to workspace $WS9
 bindsym $mod+Shift+0 move container to workspace $WS10
 # assignment
 assign [class="QtPass"] 0
-for_window [class="^QtPass$"] focus
+for_window [class="QtPass"] focus
 assign [class="Waterfox"] 2
-for_window [class="^Waterfox$"] focus
+for_window [class="Waterfox"] focus
 assign [class="qutebrowser"] 2
-for_window [class="^qutebrowser$"] focus
+for_window [class="qutebrowser"] focus
 assign [class="Surf"] 2
-for_window [class="^Surf$"] focus
+for_window [class="Surf"] focus
 assign [class="retroarch"] 5
-for_window [class="^retroarch$"] focus
+for_window [class="retroarch"] focus
 assign [class="Steam"] 5
-for_window [class="^Steam$"] focus
+for_window [class="Steam"] focus
 assign [class="Vlc"] 6
-for_window [class="^Vlc$"] focus
+for_window [class="Vlc"] focus
 assign [class="VirtualBox Manager"] 7
-for_window [class="^VirtualBox Manager$"] focus
+for_window [class="VirtualBox Manager"] focus
 
 ##~~~~~~ I3BAR ~~~~~~~~~~~##
 
@@ -206,3 +210,5 @@ exec --no-startup-id /usr/bin/blueman-applet
 exec --no-startup-id /usr/bin/nvidia-settings --load-config-only 
 exec --no-startup-id /usr/bin/unclutter -idle 1
 exec --no-startup-id /usr/bin/wal -R -a "90"
+exec --no-startup-id /usr/bin/i3 workspace 0 focus
+#exec --no-startup-id $HOME/bin/qtpd &
