--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 #
 # ~/.tmux.conf - awolbox@crash
 #
+#
+# !! (UNDER CONSTRUCTION) !!
+#
 
 #~ Term ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 set-option -g default-terminal "tmux-256color"
