modified:   .Xresources 	modified:   .bash_aliases 	modified:   .bash_functions 	modified:   .bashrc 	modified:   .bin/screen_power_management.sh 	modified:   .config/alienfx/storm.json 	modified:   .config/htop/htoprc 	modified:   .config/i3/i3.config 	modified:   .config/mutt/muttrc 	modified:   .config/polybar/config 	modified:   .config/polybar/inbox.sh 	modified:   .config/polybar/system-usb-udev.sh 	modified:   .config/qutebrowser/config.py 	modified:   .config/ranger/rifle.conf 	new file:   .gitprompt 	modified:   .local/share/themes/lotr-1 	modified:   .local/share/themes/spring 	modified:   .nvidia-settings-rc 	modified:   .toprc 	modified:   .vim/vimrc

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -36,6 +36,8 @@ bindsym $mod+Down exec --no-startup-id $HOME/.bin/dual_screen-OFF.sh
 bindsym $mod+grave exec --no-startup-id mpv dvd://; Workspace $WS6
 # pass
 bindsym $mod+z exec --no-startup-id passmenu
+# clipboard
+bindsym $mod+a exec --no-startup-id clipmenu
 
 ##~~~~~~ WINDOWS ~~~~~~~~~##
 
@@ -69,7 +71,7 @@ bindsym $mod+Shift+y resize grow width 10 px or 10 ppt
 bindsym $mod+Shift+Backspace mode "default"
 # colors
 set_from_resource $fg i3wm.color0
-set_from_resource $bg i3wm.color9
+set_from_resource $bg i3wm.color0
 # [class]	      [border][backgr.][text][indicator][child_border]
 client.focused          $bg     $bg     $fg     $bg       $bg
 client.focused_inactive $fg     $bg     $fg     $bg       $fg
@@ -167,6 +169,7 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 ##~~~~~~ POWER MENU ~~~~~~## 
 
 ## screenlocker
+#set $Locker xlock +description -echokeys -showdate -timeout 4 -fg blue -bg black -info " " -username " " -password "Password: " -validate "Hang on..." -invalid "You Suck." -mode noof -delay 10000
 set $Locker xscreensaver-command -lock
 # menu config
 set $mode_system  [l]ock - [L]ogout - [s]uspend - [h]ibernate - [r]eboot - [S]hutdown 
@@ -211,4 +214,4 @@ exec --no-startup-id /usr/bin/nvidia-settings --load-config-only
 exec --no-startup-id /usr/bin/unclutter -idle 1
 exec --no-startup-id /usr/bin/wal -R -a "90"
 exec --no-startup-id /usr/bin/i3 workspace 0 focus
-#exec --no-startup-id $HOME/bin/qtpd &
+exec --no-startup-id /usr/bin/xclipmenud &
