modified:   .config/i3/i3.config 	modified:   .vim/vimrc 	modified:   .zsh_aliases 	modified:   .zsh_functions 	modified:   .zshrc

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -5,7 +5,7 @@
 ##~~~~~~ GENERAL ~~~~~~~~~##
 
 set $mod Mod4
-set $term urxvtc
+set $term st
 font pango:Terminus, FontAwesome 10
 
 # i3 sensible term
