--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -71,7 +71,7 @@ bindsym $mod+Shift+y resize grow width 10 px or 10 ppt
 bindsym $mod+Shift+Backspace mode "default"
 # colors
 set_from_resource $fg i3wm.color0
-set_from_resource $bg i3wm.color0
+set_from_resource $bg 13wm.color13
 # [class]	      [border][backgr.][text][indicator][child_border]
 client.focused          $bg     $bg     $fg     $bg       $bg
 client.focused_inactive $fg     $bg     $fg     $bg       $fg
