--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -35,7 +35,8 @@ offset-x = 0%
 offset-y = 0%
 radius = 0
 fixed-center = true
-background = ${colors.background}
+;background = ${colors.background}
+background = #000000
 foreground = ${colors.foreground}
 line-size = 0
 line-color = #f00
@@ -73,7 +74,8 @@ offset-x = 0%
 offset-y = 0%
 radius = 0
 fixed-center = true
-background = ${colors.background}
+;background = ${colors.background}
+background = #000000
 foreground = ${colors.foreground}
 line-size = 0
 line-color = #f00
@@ -239,14 +241,17 @@ strip-wsnumbers = true
 label-mode = %mode%
 label-mode-padding = 4
 label-mode-background = ${colors.foreground}
-label-mode-foreground = ${colors.background}
+;label-mode-foreground = ${colors.background}
+;label-mode-foreground = #0000000
 label-focused = %icon%
-label-focused-foreground = ${colors.background}
+;label-focused-foreground = ${colors.background}
+label-focused-foreground = #000000
 label-focused-background = ${colors.foreground}
 ;label-focused-underline = #fba922
 label-focused-padding = 4
 label-unfocused = %icon%
-label-unfocused-background = ${colors.background}
+;label-unfocused-background = ${colors.background}
+label-unfocused-background = #000000
 label-unfocused-padding = 4
 label-visible = %icon%
 label-visible-underline = #555555
