modified:   .config/i3/i3.config 	modified:   .tmux.conf 	modified:   .toprc 	modified:   .zshrc

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -76,7 +76,7 @@ set_from_resource $bg 13wm.color13
 client.focused          $bg     $bg     $fg     $bg       $bg
 client.focused_inactive $fg     $bg     $fg     $bg       $fg
 client.unfocused        $fg     $bg     $fg     $bg       $fg
-client.urgent           $bg     $bg     $fg     $bg       $bg
+client.urgent           $fg     $fg     $fg     $bg       $bg
 client.placeholder      $bg     $bg     $fg     $bg       $bg
 client.background       $bg
 # borders
@@ -105,7 +105,7 @@ for_window [instance="math"] resize set 800 300
 for_window [instance="math"] move position center
 for_window [instance="math"] move scratchpad
 #exec --no-startup-id $term -depth 32 -bg [90]{background.alpha} -fn "xft:mono:pixelsize=24" -name math -e python3 -q
-exec --no-startup-id $term -font "xft:mono:pixelsize=24" -n math -e python3 -q
+exec --no-startup-id $term -f mono:pixelsize=24 -n math -e python3 -q
 bindsym $mod+m [instance="math"] scratchpad show; move position center; focus
 
 ##~~~~~~ WORKSPACES ~~~~~~##
