--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,9 @@
 #
 # !! (UNDER CONSTRUCTION) !!
 #
-
-#source /usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
-
-# tmux
 set-option -g default-terminal "tmux-256color"
+set-option -g default-shell /bin/zsh
+
 #set-option -g status-bg black
 #set-option -g status-fg blue
 #set-option -g status-right '#[fg=blue][#H]'
@@ -16,12 +14,10 @@ set-option -g lock-command "cmatrix -absu 3 -C blue"
 set-option -g lock-after-time 0
 set-option -g clock-mode-style 12
 set-option -g clock-mode-colour blue
-
-# tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-themepack'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/double/blue'
+run ~/.tmux/plugins/tpm/tpm
 
-# tmux-themepack
-set -g @themepack 'powerline/block/blue'
