--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -172,7 +172,10 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 ## screenlocker
 #set $Locker xlock +description -echokeys -showdate -timeout 4 -fg blue -bg black -info " " -username " " -password "Password: " -validate "Hang on..." -invalid "You Suck." -mode noof -delay 10000
-set $Locker xscreensaver-command -lock
+#set $Locker xscreensaver-command -lock
+
+set $Locker xlock -username " " -password " " -message " " -info "Enter your password mortal..." +description -fg blue -bg black -echokeys -echokey "X" -delay 10000 -mode noof
+
 # menu config
 set $mode_system  [l]ock - [L]ogout - [s]uspend - [h]ibernate - [r]eboot - [S]hutdown 
 mode "$mode_system" {
