--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -13,10 +13,9 @@ compositing-border = over
 
 [colors]
 background = ${xrdb:color0}
-;background = #373737
-;background-alt = #272727
+;background-alt = #000000
 ;background-unf = #424242
-background-alrt = ${xrdb:color7}
+background-alrt = #000000
 foreground = ${xrdb:color11:#222}
 foreground-alt = ${xrdb:color13}
 ;primary = #36f900
@@ -241,23 +240,20 @@ strip-wsnumbers = true
 label-mode = %mode%
 label-mode-padding = 4
 label-mode-background = ${colors.foreground}
-;label-mode-foreground = ${colors.background}
-;label-mode-foreground = #0000000
+label-mode-foreground = #0000000
 label-focused = %icon%
-;label-focused-foreground = ${colors.background}
 label-focused-foreground = #000000
 label-focused-background = ${colors.foreground}
 ;label-focused-underline = #fba922
 label-focused-padding = 4
 label-unfocused = %icon%
-;label-unfocused-background = ${colors.background}
 label-unfocused-background = #000000
 label-unfocused-padding = 4
 label-visible = %icon%
 label-visible-underline = #555555
 label-visible-padding = 4
 label-urgent = %index%
-label-urgent-foreground = ${colors.background}
+label-urgent-foreground = #000000
 label-urgent-background = ${colors.foreground}
 label-urgent-padding = 4
 ws-icon-0 = "0;"
