modified:   .config/i3/i3.config 	modified:   .config/polybar/config 	modified:   .xinitrc

--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -30,8 +30,8 @@ bindsym Shift+Print exec --no-startup-id scrot -u
 # multi-head
 bindsym $mod+Left exec --no-startup-id $HOME/.bin/dual_screen-left.sh
 bindsym $mod+Up exec --no-startup-id $HOME/.bin/dual_screen-top.sh
-bindsym $mod+Right exec --no-startup-id $HOME/.bin/dual_screen-right.sh
-bindsym $mod+Down exec --no-startup-id $HOME/.bin/dual_screen-OFF.sh
+bindsym $mod+Right exec --no-startup-id $HOME/.screenlayout/right.sh
+bindsym $mod+Down exec --no-startup-id $HOME/.screenlayout/off.sh
 # dvd
 bindsym $mod+grave exec --no-startup-id mpv dvd://; Workspace $WS6
 # pass
