--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -27,7 +27,7 @@ margin-top = 0
 margin-bottom = 0
 
 [bar/top]
-monitor = ${env:MONITOR:DP-1}
+monitor = ${env:MONITOR:eDP-1}
 width = 100%
 height = 30
 offset-x = 0%
@@ -66,7 +66,7 @@ cursor-scroll = ns-resize
 bottom = false
 
 [bar/bottom]
-monitor = ${env:MONITOR:DP-1}
+monitor = ${env:MONITOR:eDP-1}
 width = 100%
 height = 30
 offset-x = 0%
