--- a/.config/i3/i3.config
+++ b/.config/i3/i3.config
@@ -213,7 +213,9 @@ bindsym XF86Launch1 exec --no-startup-id alienfx-gtk
 ##~~~~~~ STARTUP ~~~~~~~~~##
 
 exec --no-startup-id $HOME/.bin/screen_power_management.sh
-exec --no-startup-id /usr/bin/compton -f --xrender-sync --xrender-sync-fence
+#exec --no-startup-id /usr/bin/compton -f --xrender-sync --xrender-sync-fence
+exec --no-staratup-id compton -b --paint-on-overlay --unredir-if-possible --backend xr_glx_hybrid --vsync drm --glx-swap-method -1 --glx-no-stencil
+
 exec --no-startup-id /usr/bin/blueman-applet
 exec --no-startup-id /usr/bin/nvidia-settings --load-config-only 
 exec --no-startup-id /usr/bin/unclutter -idle 1
