--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -27,7 +27,7 @@ margin-top = 0
 margin-bottom = 0
 
 [bar/top]
-monitor = ${env:MONITOR:eDP-1}
+monitor = ${env:MONITOR:DP-1}
 width = 100%
 height = 30
 offset-x = 0%
@@ -66,7 +66,7 @@ cursor-scroll = ns-resize
 bottom = false
 
 [bar/bottom]
-monitor = ${env:MONITOR:eDP-1}
+monitor = ${env:MONITOR:DP-1}
 width = 100%
 height = 30
 offset-x = 0%
@@ -269,13 +269,13 @@ ws-icon-9 = "9; "
 
 [module/ctemp]
 type = custom/script
-exec = echo " [ C | $(~/.config/polybar/temp-percore.sh) ]"
+exec = echo " (CPU)-[ $(~/.config/polybar/cpu_temp.sh) ]"
 interval = 0.5
 exec-if = sensors
 
 [module/gtemp]
 type = custom/script
-exec = echo "[ G |$(~/.config/polybar/gpu_temp.sh) ]"
+exec = echo "(GPU)-[ $(~/.config/polybar/gpu_temp.sh) ]"
 interval = 0.5
 
 
