modified:   .config/polybar/config

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -217,7 +217,7 @@ type = internal/network
 interface = wlp13s0
 interval = 3.0
 accumulate-stats = true
-format-connected = " <ramp-signal> { <label-connected> }"
+format-connected = "<label-connected>  {<ramp-signal>} "
 label-connected = "%local_ip%" 
 ramp-signal-0 = 😱
 ramp-signal-1 = 😠
